# AVR

./: .gitignore  README.md
APPS/Binary_Counter/: CMakeLists.txt
APPS/Binary_Counter/src/: Binary_Counter.c
APPS/Control_LED/: CMakeLists.txt
APPS/Control_LED/src/: control_LED.c
APPS/Task1/: CMakeLists.txt
APPS/Task1/src/: LED_CTL.c
APPS/Task2/: CMakeLists.txt
APPS/Task2/src/: Binary_Counter.c
APPS/Task3/: CMakeLists.txt
APPS/Task3/src/: LED_CTL.c
APPS/Task4/: CMakeLists.txt
APPS/Task4/src/: test_leds.c
APPS/Task5/: CMakeLists.txt
APPS/Task5/src/: hal_test.c
APPS/Task6/: CMakeLists.txt
APPS/Task6/src/: seven_seg.c
APPS/Task7/: CMakeLists.txt
APPS/Task7/src/: main.c
COTS/CMAKE/: flash.cmake  hex.cmake
COTS/Cmake/: DIO_config.cmake  flash.cmake  proteus.cmake
COTS/HAL/: CMakeLists.txt
COTS/HAL/LCD/: CMakeLists.txt
COTS/HAL/LCD/inc/: lcd.h  lcd_cfg.h
COTS/HAL/LCD/src/: lcd.c  lcd_cfg.c
COTS/HAL/LED/: CMakeLists.txt
COTS/HAL/LED/inc/: LED.h  LED_CFG.h
COTS/HAL/LED/src/: LED.c  LED_CFG.c
COTS/HAL/SEVEN_SEGMENT/: CMakeLists.txt
COTS/HAL/SEVEN_SEGMENT/inc/: segment7.h  segment7_cfg.h
COTS/HAL/SEVEN_SEGMENT/src/: segment7.c  segment7_cfg.c
COTS/HAL/SWITCH/: CMakeLists.txt
COTS/HAL/SWITCH/inc/: SWITCH.h  SWITCH_CFG.h
COTS/HAL/SWITCH/src/: SWITCH.c  SWITCH_CFG.c
COTS/MCAL/: CMakeLists.txt
COTS/MCAL/DIO/: CMakeLists.txt  CmakeLists.txt  dio_config.py
COTS/MCAL/DIO/inc/: DIO_CFG.h  DIO_Config.h  DIO_PIN.h  DIO_PORT.h  dio.h  pinStates.h
COTS/MCAL/DIO/src/: DIO_CFG.c  DIO_PIN.c  DIO_PORT.c  dio.c
COTS/MCAL/PORT/: CMakeLists.txt
COTS/MCAL/PORT/inc/: PORT.h  PORT_CFG.h
COTS/MCAL/PORT/src/: PORT.c  PORT_CFG.c
COTS/STD_LIB/: STD_Types.h  bit_math.h  std_types.h
